--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<string name="app_name">Angler</string>
+	<string name="app_name">KnowFish</string>
 	<string name="title_item_detail">Item Detail</string>
 
 	<string name="content_explore_rangeley">Fish App</string>
